[gd_scene load_steps=3 format=3 uid="uid://bpmg8fx6mngp5"]

[ext_resource type="Texture2D" uid="uid://kt2cfuh4720o" path="res://icon.svg" id="1_6i7ck"]
[ext_resource type="Script" path="res://src/scripts/UI/spellcard_description.gd" id="1_rssm8"]

[node name="SpellcardDescription" type="Control" groups=["Spellcard Description"]]
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rssm8")

[node name="Icon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("1_6i7ck")
expand_mode = 3

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = 22.0
offset_right = 202.0
offset_bottom = 45.0
text = "SpellCard Name"

[node name="Container" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
offset_left = 1.0
offset_top = 86.0
offset_right = 301.0
offset_bottom = 244.0

[node name="LabelContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.4

[node name="Augment" type="Label" parent="Container/LabelContainer"]
layout_mode = 2
text = "Augment"

[node name="ShotType" type="Label" parent="Container/LabelContainer"]
layout_mode = 2
text = "Shot Type"

[node name="RoF" type="Label" parent="Container/LabelContainer"]
layout_mode = 2
text = "Rate of Fire
"

[node name="ProjectileDamage" type="Label" parent="Container/LabelContainer"]
layout_mode = 2
text = "Projectile Damage"

[node name="NoP" type="Label" parent="Container/LabelContainer"]
layout_mode = 2
text = "#Projectile"

[node name="DPS" type="Label" parent="Container/LabelContainer"]
layout_mode = 2
text = "DPS"

[node name="ValueContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Augment" type="Label" parent="Container/ValueContainer"]
layout_mode = 2
text = "Augment"

[node name="ShotType" type="Label" parent="Container/ValueContainer"]
layout_mode = 2
text = "Shot Type"

[node name="RoF" type="Label" parent="Container/ValueContainer"]
layout_mode = 2
text = "Rate of Fire
"

[node name="ProjectileDamage" type="Label" parent="Container/ValueContainer"]
layout_mode = 2
text = "Projectile Damage"

[node name="NoP" type="Label" parent="Container/ValueContainer"]
layout_mode = 2
text = "#Projectile"

[node name="DPS" type="Label" parent="Container/ValueContainer"]
layout_mode = 2
text = "DPS"
